Make it possible to open inputs generated in the build directory

It's not very useful because one shouldn't use the project view to debug
generated files, but considering that it wasn't working anyway I thought
it made sense to make it work.

BUG: 295521