projectmanagers/cmake/cmakemanager.cpp
@@ -893,11 +893,16 @@ QList<KDevelop::ProjectFolderItem*> CMakeManager::parse( KDevelop::ProjectFolder
                 if(sFile.startsWith("#[") || sFile.isEmpty())
                     continue;
 
-                KUrl sourceFile(sFile);
-                if(sourceFile.isRelative()) {
+                KUrl sourceFile;
+                if(KUrl::isRelativeUrl(sFile)) {
                     sourceFile = folder->url();
                     sourceFile.addPath( sFile );
-                }
+                    if(!QFile::exists(sourceFile.toLocalFile())) {
+                        sourceFile = buildDirectory(folder);
+                        sourceFile.addPath( sFile );
+                    }
+                } else
+                    sourceFile = sFile;
                 sourceFile.cleanPath();
                 tfiles += sourceFile;
                 kDebug(9042) << "..........Adding:" << sourceFile << sFile << folder->url();
